tests/negative/comptime_exponent_budget.ora
contract ComptimeExponentBudget {
    pub fn run() -> u256 {
        return comptime {
            2 ** 1000001;
        };
    }
}
